Avoid jdk24 method